# rustc_lexer_benchmark

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
src_new/: cursor.rs  lib.rs  tests.rs
src_orig/: cursor.rs  lib.rs
