[package]
name = "rustc_lexer"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/rust-lang/rust/"
description = """
Rust lexer used by rustc. No stability guarantees are provided.
"""

# Note that this crate purposefully does not depend on other rustc crates
[dependencies]
memchr = "2.7.6"
no-panic = "0.1.35"
unicode-properties = { version = "0.1.0", default-features = false, features = [
    "emoji",
] }
unicode-xid = "0.2.0"

[dev-dependencies]
criterion = "0.8.0"
expect-test = "1.4.0"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
rpath = false


[profile.bench]
opt-level = 3
debug = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
rpath = false


[features]
default = []
orig = []
